--- a/res/peerspeak_ui.glade
+++ b/res/peerspeak_ui.glade
@@ -3,6 +3,8 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkApplicationWindow" id="peerspeak_window">
+    <property name="width_request">720</property>
+    <property name="height_request">480</property>
     <property name="can_focus">False</property>
     <child>
       <object class="GtkBox">
@@ -176,6 +178,8 @@
                 <property name="width_request">240</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="margin_left">5</property>
+                <property name="margin_bottom">5</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection"/>
                 </child>
@@ -189,7 +193,10 @@
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_right">5</property>
+                <property name="margin_bottom">5</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">5</property>
                 <child>
                   <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
@@ -202,17 +209,22 @@
                         <property name="can_focus">False</property>
                         <child>
                           <object class="GtkBox" id="chat_box">
+                            <property name="name">chat</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="margin_left">3</property>
+                            <property name="margin_right">3</property>
+                            <property name="margin_top">3</property>
                             <property name="orientation">vertical</property>
+                            <property name="spacing">3</property>
                             <child>
                               <object class="GtkLabel">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="halign">start</property>
                                 <property name="label" translatable="yes">&lt;b&gt;Welcome to Peerspeak!&lt;/b&gt;</property>
                                 <property name="use_markup">True</property>
                                 <property name="selectable">True</property>
-                                <property name="xalign">0</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
